--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postinstall": "npx simple-git-hooks"
   },
   "dependencies": {
+    "@iconify/json": "^2.2.221",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.7.2",
     "element-plus": "^2.7.5",
