--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "unplugin-vue-macros": "^2.9.2",
     "unplugin-vue-router": "^0.8.6",
     "vite": "^5.2.11",
+    "vite-plugin-vue-devtools": "^7.3.4",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.19"
   },
