--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@iconify/json": "^2.2.221",
     "@vueuse/core": "^10.9.0",
+    "@vueuse/math": "^10.11.0",
     "axios": "^1.7.2",
     "element-plus": "^2.7.5",
     "mockjs": "^1.1.0",
